# navette

./: CLAUDE.md  Cargo.toml  README.md  REVIEW_LOG.md  ROADMAP.md  clauded.flatpak
.claude/: REVIEW_LOG.md
.claude/PRPs/plans/: apple-watch-approval-companion.plan.md  auth-pairing.plan.md  desktop-stt-offload.plan.md  material-design-3-overhaul.plan.md  server-switcher.plan.md  smart-approval-ux.plan.md
.claude/PRPs/reports/: codebase-audit-fixes-report.md  device-management-biometric-report.md  expo-54-rn-upgrade-report.md  navette-ux-fixes-report.md  qr-pairing-report.md  secrets-management-report.md  websocket-tls-report.md
.claude/PRPs/reviews/: navette-ux-fixes-review.md  pr-14-review-r2.md  pr-14-review.md  pr-16-review.md  pr-17-review.md
.omc/: project-memory.json
.omc/sessions/: 5e82ff23-67dd-448a-ac49-8adf20b4f4f2.json  69ec0687-5dea-4169-8e0e-880765004281.json  bc0673c4-8251-4da7-afc5-a0671a0f1620.json
.omc/state/: agent-replay-bc0673c4-8251-4da7-afc5-a0671a0f1620.jsonl  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-04-18T00-08-58-696Z.json  checkpoint-2026-04-18T01-46-49-922Z.json  checkpoint-2026-04-18T01-54-16-085Z.json  (+1 more)
desktop/e2e/: connect.spec.ts  navigation.spec.ts
flatpak/: clauded.service  com.beary.clauded.metainfo.xml  com.beary.clauded.yml  io.github.bearyjd.relay.json  io.github.bearyjd.relay.metainfo.xml
mobile/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
mobile/plugins/: withSpeechRecognitionQueries.js
mobile/src/: SnackbarContext.tsx  ThemeContext.tsx  theme.ts
src/: claude.rs  config.rs  db.rs  hook.rs  main.rs  notify.rs  ws.rs
(+48 files in other folders)
