[package]
name = "clauded"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clauded"
path = "src/main.rs"

[[bin]]
name = "clauded-hook"
path = "src/bin/clauded-hook.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync", "net", "time", "io-util", "io-std", "macros"] }
anyhow = "1"
rusqlite = { version = "0", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
